k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ui
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: master
  ports:
  - name: ui
    port: 80
    targetPort: 8080
