k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-ui
          servicePort: 8080
